--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./src/:/var/www/html
     ports:
       - ${VITE_PORT}:${VITE_PORT}
+      - ${REVERB_SERVER_PORT:-8080}:8080
     environment:
       - DB_CONNECTION=mysql
       - DB_HOST=db
